2010-04-26  Eric Norum <norume@aps.anl.gov>

    * startup/bspstart.c: Clean up some warnings.
    * network/network.c: Fix up full/half duplex printout and some warnings.

2010-04-08	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* start/start.S: Spacing.

2009-12-16      Thomas Doerfler <Thomas.Doerfler@embedded-brains.de>

	* console/console.c: adapted to new prototype for *_write
	function

2009-11-03	Ralf Corsépius <ralf.corsepius@rtems.org>

	* startup/bspstart.c: Add missing prototype.

2009-10-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/uC5282.cfg: Remove RTEMS_BSP_FAMILY.

2009-10-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/uC5282.cfg: New (relocated from /make/custom).

2009-09-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* console/console.c: Reflect termios_baud_to_number having been
	renamed to rtems_termios_baud_to_number.

2009-09-28	Joel Sherrill <joel.sherrill@OARcorp.com>

	* console/console.c: Add pointer to method used by getchark().

2009-09-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Remove RTEMS_BSP_BOOTCARD_OPTIONS.

2009-09-09	Till Straumann <strauman@slac.stanford.edu>

	* startup/bspstart.c: Added dummy implementation of firmware
	syscalls for use with QEMU. Dummy handler is installed if no
	pre-existing firmware handler is found.

2009-08-26	Joel Sherrill <joel.sherrill@oarcorp.com>

	* clock/clock.c, include/bsp.h: Rename BSP specific idle thread to
	bsp_idle_thread.

2009-07-30  Eric Norum <norume@aps.anl.gov>

	* include/bsp.h, network/network.c, startup/bspstart.c:  Try enabling
	the data cache.

2009-07-28  Eric Norum <norume@aps.anl.gov>

	PR 1420/bsps
	* startup/bspstart.c: Turn on buffered writes to DRAM. As Device Errata
	SECF124 notes this may cause double writes, but that's not really a big
	problem and benchmarking tests have shown that buffered writes do gain
	some performance.

2009-07-16	Joel Sherrill <joel.sherrill@oarcorp.com>
